Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.11, 11.0(EOL), 11.1(EOL), 11.2(EOL), 11.3(EOL), 11.4, 11.5(EOL)
-
None
-
Can result in hang or crash
-
Q3/2025 Maintenance
Description
--source include/have_innodb.inc
|
--source include/have_partition.inc
|
CREATE TABLE t1 (pk INT PRIMARY KEY) ENGINE=InnoDB PARTITION BY HASH(pk) PARTITIONS 10;
|
CREATE TABLE t2 (c INT) ENGINE=InnoDB;
|
CREATE TEMPORARY TABLE t3 (c INT);
|
REPAIR TABLE t1, t2, t3;
|
Leads to:
|
10.5.5 30e7a0a866dce530d8328c6d614e48d39a264f9b |
mysqld: /test/10.5_dbg/sql/temporary_tables.cc:333: bool THD::open_temporary_table(TABLE_LIST*): Assertion `tl->table == __null' failed.
|
|
10.5.5 30e7a0a866dce530d8328c6d614e48d39a264f9b |
Core was generated by `/test/MD140720-mariadb-10.5.5-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
|
at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
|
[Current thread is 1 (Thread 0x1511568e4700 (LWP 1635235))]
|
(gdb) bt
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
|
#1 0x0000557aec3804d7 in my_write_core (sig=sig@entry=6) at /test/10.5_dbg/mysys/stacktrace.c:518
|
#2 0x0000557aebb3a9ba in handle_fatal_signal (sig=6) at /test/10.5_dbg/sql/signal_handler.cc:330
|
#3 <signal handler called>
|
#4 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
|
#5 0x0000151154b7a8b1 in __GI_abort () at abort.c:79
|
#6 0x0000151154b6a42a in __assert_fail_base (fmt=0x151154cf1a38 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x557aec5665a1 "tl->table == __null", file=file@entry=0x557aec5660c8 "/test/10.5_dbg/sql/temporary_tables.cc", line=line@entry=333, function=function@entry=0x557aec566a00 <THD::open_temporary_table(TABLE_LIST*)::__PRETTY_FUNCTION__> "bool THD::open_temporary_table(TABLE_LIST*)") at assert.c:92
|
#7 0x0000151154b6a4a2 in __GI___assert_fail (assertion=assertion@entry=0x557aec5665a1 "tl->table == __null", file=file@entry=0x557aec5660c8 "/test/10.5_dbg/sql/temporary_tables.cc", line=line@entry=333, function=function@entry=0x557aec566a00 <THD::open_temporary_table(TABLE_LIST*)::__PRETTY_FUNCTION__> "bool THD::open_temporary_table(TABLE_LIST*)") at assert.c:101
|
#8 0x0000557aebaa2e87 in THD::open_temporary_table (this=this@entry=0x151131c15088, tl=tl@entry=0x151131c74f88) at /test/10.5_dbg/sql/temporary_tables.cc:333
|
#9 0x0000557aebaa3405 in THD::open_temporary_tables (this=this@entry=0x151131c15088, tl=tl@entry=0x151131c74f88) at /test/10.5_dbg/sql/temporary_tables.cc:475
|
#10 0x0000557aeb9f2b51 in open_only_one_table (thd=thd@entry=0x151131c15088, table=table@entry=0x151131c74f88, repair_table_use_frm=repair_table_use_frm@entry=false, is_view_operator_func=is_view_operator_func@entry=true) at /test/10.5_dbg/sql/sql_admin.cc:393
|
#11 0x0000557aeb9f436b in mysql_admin_table (thd=thd@entry=0x151131c15088, tables=tables@entry=0x151131c74168, check_opt=check_opt@entry=0x151131c1a338, operator_name=operator_name@entry=0x557aec861426 "repair", lock_type=lock_type@entry=TL_WRITE, org_open_for_modify=org_open_for_modify@entry=true, repair_table_use_frm=false, extra_open_options=32, prepare_func=0x557aeb9f3081 <prepare_for_repair(THD*, TABLE_LIST*, HA_CHECK_OPT*)>, operator_func=(int (handler::*)(handler * const, THD *, HA_CHECK_OPT *)) 0x557aebb48cb4 <handler::ha_repair(THD*, st_ha_check_opt*)>, view_operator_func=0x557aeb98cdde <view_repair(THD*, TABLE_LIST*, st_ha_check_opt*)>) at /test/10.5_dbg/sql/sql_admin.cc:517
|
#12 0x0000557aeb9f6f62 in Sql_cmd_repair_table::execute (this=<optimized out>, thd=0x151131c15088) at /test/10.5_dbg/sql/sql_admin.cc:1410
|
#13 0x0000557aeb893e4a in mysql_execute_command (thd=thd@entry=0x151131c15088) at /test/10.5_dbg/sql/sql_parse.cc:5951
|
#14 0x0000557aeb89b752 in mysql_parse (thd=thd@entry=0x151131c15088, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x1511568e3350, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.5_dbg/sql/sql_parse.cc:7993
|
#15 0x0000557aeb888204 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x151131c15088, packet=packet@entry=0x151131c67089 "", packet_length=packet_length@entry=23, is_com_multi=is_com_multi@entry=false, is_next_command=is_next_command@entry=false) at /test/10.5_dbg/sql/sql_parse.cc:1866
|
#16 0x0000557aeb8869de in do_command (thd=0x151131c15088) at /test/10.5_dbg/sql/sql_parse.cc:1347
|
#17 0x0000557aeb9e2c3b in do_handle_one_connection (connect=<optimized out>, connect@entry=0x1511358c7808, put_in_cache=put_in_cache@entry=true) at /test/10.5_dbg/sql/sql_connect.cc:1411
|
#18 0x0000557aeb9e3357 in handle_one_connection (arg=arg@entry=0x1511358c7808) at /test/10.5_dbg/sql/sql_connect.cc:1313
|
#19 0x0000557aebe46ca8 in pfs_spawn_thread (arg=0x151153446508) at /test/10.5_dbg/storage/perfschema/pfs.cc:2201
|
#20 0x000015115585d6db in start_thread (arg=0x1511568e4700) at pthread_create.c:463
|
#21 0x0000151154c5ba3f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
Bug confirmed present in:
MariaDB: 10.1.46 (dbg), 10.2.33 (dbg), 10.3.24 (dbg), 10.4.14 (dbg), 10.5.5 (dbg)
Bug confirmed not present in:
MariaDB: 10.1.46 (opt), 10.2.33 (opt), 10.3.24 (opt), 10.4.14 (opt), 10.5.5 (opt)
MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.47 (dbg), 5.6.47 (opt), 5.7.29 (dbg), 5.7.29 (opt), 8.0.19 (dbg), 8.0.19 (opt)
Attachments
Issue Links
- relates to
-
MDEV-33826 Assertion `tl->table == __null' failed in THD::open_temporary_table
-
- Closed
-